--- a/pom.xml
+++ b/pom.xml
@@ -59,11 +59,11 @@
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
-    <dependency>
-      <groupId>org.jsoup</groupId>
-      <artifactId>jsoup</artifactId>
-      <version>1.11.2</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.jsoup</groupId>-->
+      <!--<artifactId>jsoup</artifactId>-->
+      <!--<version>1.11.2</version>-->
+    <!--</dependency>-->
 
     <!-- json -->
     <dependency>
